  (Pierre Chambart, report by Leo White, review by Marc Shinwell)

- GPR#709: Share a few more equal switch branches
  (Pierre Chambart, review by Gabriel Scherer)

- GPR#712: Small improvements to type-based optimizations for array
  and lazy
  (Alain Frisch, review by Pierre Chambart)

- GPR#723 Sort emitted functions according to source location
  (Pierre Chambart, review by Marc Shinwell)

### Tools:

- MPR#7189: toplevel #show, follow chains of module aliases
  (Gabriel Scherer, report by Daniel Bünzli, review by Thomas Refis)

- MPR#7248: have ocamldep interpret -open arguments in left-to-right order
  (Gabriel Scherer, report by Anton Bachin)

- GPR#452: Make the output of ocamldep more stable
  (Alain Frisch)

- GPR#598: Add a --strict option to ocamlyacc treat conflicts as errors
  (this option is now used for the compiler's parser)
  (Jeremy Yallop)

- GPR#613: make ocamldoc use -open arguments
  (Florian Angeletti)

- GPR#718: ocamldoc, fix order of extensible variant constructors
  (Florian Angeletti)

- MPR#7290: ocamldoc, improved support for inline records
  (Florian Angeletti)

- Add the -no-version option to the toplevel
  (Sébastien Hinderer)

### Debugging and profiling:

- GPR#585: Spacetime, a new memory profiler (Mark Shinwell, Leo White)

### Runtime system:

- PR#7203, GPR#534: Add a new primitive caml_alloc_float_array to allocate an
  array of floats
  (Thomas Braibant)


### Manual and documentation:

- PR#7243: warn users against using WinZip to unpack the source archive
  (Damien Doligez, report by Shayne Fletcher)

- PR#7245, GPR#565: clarification to the wording and documentation
  of Warning 52 (fragile constant pattern)
  (Gabriel Scherer, William, Adrien Nader, Jacques Garrigue)


### Build system:

- GPR#512: Installed `ocamlc`, `ocamlopt`, and `ocamllex` are now the
  native-code versions of the tools, if those versions were built.
  (Demi Obenour)

- GPR#324: Compiler developers: Adding new primitives to the